2016-10-18
split update_display function in map_selection into multiple sections
added tests for map_selection

2016-10-17
fixed bug in timerange for get_details in dbaccess
reduced usage of global "scale" variable in progression to removing the global.
upgraded test generator to not overwrite existing data
added tests for map_ports.js
added tests for map_node.js
started tests for map_selection.js

2016-10-14
Started testing the JS
installed Jasmine testing framework
added tests for map.js
wrote python script to create skeleton test files for all functions in js files.
added partial tests for map_ports.js

2016-10-13
Should the details pane respect the timerange and port filter?
  Timerange is respected.
  Filter is ignored.
added tests for pages/details.py
ammended tests for dbaccess.py get_details to cover ports and timeranges

2016-10-12
fixed several bugs while writing test cases.
finished writing test cases for dbaccess.py
added tests for common.py
added tests for server.py
added tests for pages/map.py
added tests for pages/nodes.py
added tests for pages/links.py

2016-10-11
updated README for asa and aws importers
split server.py into server and wsgiserver.py for deployment
started test cases covering dbaccess.py;
  rewrote get_links_* functions

2016-09-01
Tried a new schema:
    Nodes ((ip, subnet)[PK], ip_range, x, y, radius, alias)
    Ports (port[PK], active, name, description)
    PortAlias (port[PK/FK], name, description)
    Links (id[PK], (src_address, subnet)[FK], (dest_address, subnet)[FK], port[FK])
    Links8 ((link_id[FK], timestamp)[PK], count)
    Links16 ((link_id[FK], timestamp)[PK], count)
    Links24 ((link_id[FK], timestamp)[PK], count)
    Links32 ((link_id[FK], timestamp)[PK], count)
Issues:
    Keeping the ip as a 32-bit integer is confusing for the developer/maintainer.
        It slows down testing, in the absence of an easy translation
        It must be translated back and forth between display and representation